Fixed warta, kategorial & kategorial-detail page layout on mobile device

--- a/src/app/pages/beranda/beranda.component.scss
+++ b/src/app/pages/beranda/beranda.component.scss
@@ -87,8 +87,7 @@ p.link-icon {
   font-weight: bold;
 }
 
-// Mobile device
-@media (max-width: 805px) {
+@media (max-width: 810px) {
   .sambutan {
     flex-direction: column;
   }
