--- a/src/app/pages/kegiatan/kategorial/kategorial.component.scss
+++ b/src/app/pages/kegiatan/kategorial/kategorial.component.scss
@@ -42,3 +42,17 @@ p.kategori-text {
   font-weight: bold;
   text-align: center;
 }
+
+@media (max-width: 810px) {
+
+  h3 {
+    font-size: 20px;
+  }
+
+  div.kategorial {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+}
